# Athena

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-test  README.md  alembic.ini  authentication_plugin.py  base_config.cfg  build_docker.bat  config.cfg  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  execution_flow.excalidraw  main.py  nginx.conf  nltk_classifier.ipynb  nlu_config.yml  nlu_data.md  plugin_base.py  plugin_manager.py  publish.bat  pyproject.toml  requirements.txt  run_api.bat  run_api.sh  run_tests.bat  run_tests.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_feature_request.md  code_refactoring_improvement.dontuse  documentation_improvement.md  feature_request.md  question_or_discussion.md  security_vulnerability.md
athena/: __init__.py  __main__.py  api.py  celery.py  config.py  db.py  gpt3_utils.py  input_processor.py  intentions_data.py  loguru_config.py  nlu_utils.py  prompt.py  user_manager.py
athena-app/: package-lock.json  package.json
athena-app/public/: index.html  manifest.json
athena-app/src/: App.css  App.js  Avatar.css  Avatar.js  Chat.js  DarkModeToggle.css  DarkModeToggle.js  InputBox.css  InputBox.js  Message.css  Message.js  MessageBubble.css  MessageBubble.js  MessageList.js  analytics.js  index.js
athena/api_views/: __init__.py  chat.py  llm.py
athena/crud/: response.py
athena/llm/fast_chat/: chat_completion.py
athena/llm/openai/: chat_completion.py  completion.py  constants.py  embedding.py
athena/llm/vicuna/: __init__.py
athena/memory/: redis.py  redis_vector.py
athena/models/: api.py
athena/nlu/: base.py  intentions_data.py  nltk_entities.py  nltk_intent.py
athena/plugins/: authentication_plugin.py  plugin_base.py  plugin_manager.py
athena/tasks/: example_task.py
athena/tokenization/: openai.py
conversation_history/: 4_21_2023.txt  4_22_2023.txt
plugins/: arithmetic_plugin.py
tests/: test_input_processor.py  test_input_processor_svm.py
